# lab6

./: CMakeLists.txt  CPackConfig.cmake  README.md
lab06-master/.github/workflows/: CI_release.yml
